--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -117,5 +117,13 @@
             android:text="@string/signupBtn"
             android:textSize="18sp"
             android:padding="12dp" />
+
+        <ImageView
+            android:layout_width="280dp"
+            android:layout_height="160dp"
+            android:layout_marginTop="16dp"
+            android:src="@drawable/rece" />
     </LinearLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
